No mip-maps on image empties. #37468

Closed
opened 2013-11-15 10:30:26 +01:00 by Ben Roose · 10 comments

System Information
vista 8800 Ultra

Blender Version
Worked: Blender 2.69 r60995

Short description of error
Turning off mip-map's dosent affect image empties-it should IMO

Exact steps for others to reproduce the error
turning off mip-maps in system in prefs. dosent affect image empties

**System Information** vista 8800 Ultra **Blender Version** Worked: Blender 2.69 r60995 **Short description of error** Turning off mip-map's dosent affect image empties-it should IMO **Exact steps for others to reproduce the error** turning off mip-maps in system in prefs. dosent affect image empties
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BenjaminRoose

Added subscriber: @BenjaminRoose

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Actually, empties do not get loaded with mipmaps at all anyway, they only get basic box (linear) filtering, even now. Maybe you mean point filtering? This is not the same as mipmapping though.

Actually, empties do not get loaded with mipmaps at all anyway, they only get basic box (linear) filtering, even now. Maybe you mean point filtering? This is not the same as mipmapping though.

This issue was referenced by blender/blender-addons-contrib@ea79dcebe2

This issue was referenced by blender/blender-addons-contrib@ea79dcebe2303b0b58a0791cd8b531ecc45a2394

This issue was referenced by ea79dcebe2

This issue was referenced by ea79dcebe2303b0b58a0791cd8b531ecc45a2394

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ea79dcebe2.

Closed by commit ea79dcebe2.

Added subscriber: @brecht

Added subscriber: @brecht

Image empties don't actually support mipmaps right now, but the user preference doubles as a way to disable any kind of interpolating in texture filter and just show nearest neighbour filter, so for this it's a bit more consistent.

Image empties don't actually support mipmaps right now, but the user preference doubles as a way to disable any kind of interpolating in texture filter and just show nearest neighbour filter, so for this it's a bit more consistent.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37468
No description provided.